Fixing names and scrollbar

--- a/chrome/extension/App.css
+++ b/chrome/extension/App.css
@@ -1,4 +1,7 @@
 body {
-  width: 800px; /* chrome extension limit */
+  width: 800px;
+  max-width: 100%;
   margin: 0 auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
